hello_world_template.html

--- a/Hello_World/Hello/templates/hello_world_template.html
+++ b/Hello_World/Hello/templates/hello_world_template.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <h1>Hello World fetched from Database:</h1>
-    <p>{{ hello_world_from_db }}</p>
+    <p>{{ hello_world_from_db }} from db </p>
 
     <h1>Hello World fetched from Redis Cache:</h1>
-    <p>{{ cached_hello_world }}</p>
+    <p>{{ cached_hello_world }} from redis </p>
 </body>
 </html>
